<resources>
    <string name="app_name">Battery Station</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_screen_sever">ScreenSeverActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="tap_on_screen">Chạm vào màn hình để đăng nhập</string>
    <string name="station_maintenance">Trạm đang bảo trì.</string>
    <string name="station_update">Trạm đang cập nhật.</string>
    <string name="no_internet">Trạm mất tín hiệu.</string>
    <string name="come_back_later">Vui lòng tìm trạm khác hoặc quay lại sau.</string>
    <string name="station_out_of_battery">Trạm đang hết Pin.</string>
    <string name="scan_qr_code">Quét mã QR bằng ứng dụng Selex để đăng nhập</string>
    <string name="login_with_selex_account">Đăng nhập bằng tài khoản Selex</string>
    <string name="or">Hoặc</string>
    <string name="qr_expired">Mã QR hết hạn</string>
    <string name="get_new_code">Lấy mã mới</string>
    <string name="user_name">Tên tài khoản</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="scan_qr_success">Quét mã QR thành công!</string>
    <string name="can_not_generate_qr_code">Không tải được mã QR</string>
    <string name="regenerate_qr_code">Tải lại mã</string>
    <string name="enter_wrong_account_or_password">Thông tin tài khoản hoặc mật khẩu không chính xác</string>
    <string name="please_chose_login">Vui lòng chọn “ Đăng nhập” trên thiết bị di động của bạn</string>
    <string name="logout">Đăng xuất</string>
    <string name="start_change_battery">Bắt đầu đổi Pin</string>
    <string name="user_put_the_old_battery_in_the_station">Người dùng đặt PIN cũ vào trạm</string>
    <string name="user_put_the_new_battery_in_the_station">TRẢ PIN MỚI</string>
    <string name="number_compartment_door_opened">Đã mở cửa khoang số </string>
    <string name="please_put_the_battery_in_the_compartment">Quý khách vui lòng đặt Pin cần đổi vào khoang, đóng cửa khoang để tiếp tục.</string>
    <string name="receive_new_battery">Mời quý khách nhận Pin mới</string>
    <string name="system_is_checking_battery">Hệ thống đang kiểm tra Pin</string>
    <string name="system_is_finding_new_battery">Hệ thống đang tìm Pin mới</string>
    <string name="user_receive">Người dùng nhận Pin mới</string>
    <string name="complete_battery_exchange">Hoàn thành đổi Pin</string>
    <string name="station_can_not_read_battery">Trạm không đọc được Pin</string>
    <string name="please_put_battery_correct_position_and_again">Vui lòng đặt Pin đúng vị trí, đóng cửa và chọn Thử lại.</string>
    <string name="back">Quay lại</string>
    <string name="retry">Thử lại</string>
    <string name="battery_does_not_login_account">Pin không thuộc tài khoản đăng nhập</string>
    <string name="please_check_again_or_call_support">Vui lòng kiểm tra lại hoặc gọi cho bộ phận hỗ trợ</string>
    <string name="invite_you_receive_new_battery">Mời quý khách nhận lại Pin mới.</string>
    <string name="continue_change_battery">Tiếp tục đổi Pin</string>
    <string name="to_continue_change_battery_you_please">Để tiểp tục đổi PIN, Quý khách vui lòng cho Pin cần đổi vào khoang vừa nhận và đóng cửa khoang.</string>
    <string name="if_do_not_want_to_change_you_please">Nếu không muốn đổi thêm, Quý khách vui lòng đóng cửa khoang và chọn “Kết thúc”.</string>
    <string name="logout_station">Đăng xuất khỏi trạm</string>
    <string name="info_old_battery">Thông tin Pin cũ</string>
    <string name="info_new_battery">Thông tin Pin mới</string>
    <string name="info_battery">Thông tin Pin</string>
    <string name="change_battery_success">Hoàn thành đổi Pin</string>
    <string name="total_time_change_battery">Tổng thời gian đổi Pin của Quý khách là 2:31 giây, nhanh hơn 78% người dùng chung.</string>
    <string name="please_rate_quality">Xin mời Quý khách đánh giá chất lượng đổi Pin, để chúng tôi cải thiện hơn trong tương lai.</string>
    <string name="thank_you">Cảm ơn góp ý của quý khách</string>
    <string name="main_factor_that_led_to_your_assessment">Yếu tố chính dẫn đến đánh giá của bạn là gì?</string>
    <string name="please_chose_2_answer">Vui lòng chọn tối đa 2 đáp án</string>
    <string name="time_change_battery_fast">Thời gian đổi pin nhanh</string>
    <string name="i_find_it_easy_to_use">Tôi thấy dễ dùng</string>
    <string name="convenient_parking">Chỗ đỗ xe tiện</string>
    <string name="position_change_battery_safe">Địa điểm đổi Pin an toàn</string>
    <string name="good_battery_quality">Chất lượng pin tốt</string>
    <string name="good_all">Tất cả đều tốt</string>
    <string name="send_rate">Gửi đánh giá</string>
    <string name="long_battery_change_time">Thời gian đổi pin lâu</string>
    <string name="i_find_it_difficult_to_use">Tôi thấy khó dùng</string>
    <string name="inconvenient_parking">Nơi đỗ xe bất tiện</string>
    <string name="battery_exchange_point_is_not_safe">Điểm đổi Pin không an toàn</string>
    <string name="battery_quality_is_not_good">Chất lượng pin không tốt</string>
    <string name="everything_is_not_good">Mọi thứ đều không tốt</string>
    <string name="wishing_you_safe_journey">Chúc quý khách thượng lộ bình an</string>
    <string name="login_not_success">Đăng nhập không thành công</string>
    <string name="error_info_account_or_password">Sai thông tin tài khoản hoặc mật khẩu</string>
    <string name="exit">Thoát</string>
    <string name="please_close_station">Vui lòng đóng cửa trạm</string>
    <string name="please_close_station_message">Nếu cửa khoang bị kẹt, vui lòng chọn Khóa khoang và thử lại với ô khác</string>
    <string name="let_the_system_proceed_to_change_the_battery">Để hệ thống tiến hành đổi Pin</string>
    <string name="internet_is_connected">Internet đã được kết nối</string>
    <string name="internet_disconnects">Internet ngắt kết nối</string>
    <string name="syncing_data">Đang đồng bộ dữ liệu</string>
    <string name="station_lost_signal">Trạm mất tín hiệu</string>
    <string name="downloading">Đang tải file apk</string>
    <string name="error_cabinet">Nếu gặp vấn đề vui lòng gọi tổng đài 1900633489 để được hỗ trợ</string>
    <string name="error_no_sub">Chưa đăng ký gói dịch vụ</string>
    <string name="error_no_sub_des">Để sử dụng dịch vụ đổi Pin, quý khách vui lòng đăng ký gói trên ứng dụng Selex hoặc liên hệ tổng đài (1900633489) để được hỗ trợ.</string>
    <string name="error_sub_expried">Gói dịch vụ đã hết hạn</string>
    <string name="error_sub_expried_des">Để tiếp tục đổi Pin, quý khách vui lòng gia hạn gói trên ứng dụng Selex hoặc liên hệ tổng đài (1900633489) để được hỗ trợ.</string>
    <string name="system_processing">Hệ thống đang xử lí\nVui lòng đợi trong giấy lát</string>
    <string name="dialog_warning_title">Cảnh báo</string>
    <string name="dialog_warning_message">Quý khách có chắc chắn muốn quay lại màn hình chính?</string>
    <string name="dialog_accept">Đồng ý</string>
    <string name="dialog_cancel">Hủy</string>
    <string name="dialog_opencabin">Mở khoang</string>
    <string name="dialog_error">Thông báo</string>
    <string name="finish">Kết thúc</string>
    <string name="warning_dialog_login">Vui lòng đăng nhập và thử lại</string>
</resources>
