<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/color_00103A"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.changeBattery.stationCanNotReadBattery.StationCannotReadBatteryFragment">

        <TextView
            android:id="@+id/tv_title"
            style="@style/style_text_40sp_white_inter_bold"
            android:layout_marginTop="52dp"
            android:text="@string/info_battery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_can_not_read_battery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="118dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/img_battery_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />



        <TextView
            android:id="@+id/tv_percent_battery"
            style="@style/style_text_200sp_white_inter_medium"
            android:fontFamily="@font/inter_medium"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/img_can_not_read_battery"
            app:layout_constraintEnd_toEndOf="@+id/img_can_not_read_battery"
            app:layout_constraintStart_toStartOf="@+id/img_can_not_read_battery"
            app:layout_constraintTop_toTopOf="@+id/img_can_not_read_battery"
            app:layout_constraintVertical_bias="0.6" />


        <TextView
            android:id="@+id/tv_overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/color_4D00103A"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/img_can_not_read_battery"
            app:layout_constraintEnd_toEndOf="@+id/img_can_not_read_battery"
            app:layout_constraintStart_toStartOf="@+id/img_can_not_read_battery"
            app:layout_constraintTop_toTopOf="@+id/img_can_not_read_battery" />

        <TextView
            android:id="@+id/tv_serial_battery"
            style="@style/style_text_32sp_white_inter_semi_bold"
            android:textColor="@color/color_CCFFFFFF"
            android:layout_marginTop="183dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/img_can_not_read_battery"
            app:layout_constraintStart_toStartOf="@+id/img_can_not_read_battery"
            app:layout_constraintTop_toTopOf="@+id/img_can_not_read_battery" />
        <LinearLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_station_can_not_read_battery"
                style="@style/style_text_32sp_white_inter_bold"
                android:layout_marginBottom="8dp"
                android:text="@string/station_can_not_read_battery" />

            <TextView
                android:id="@+id/tv_please_put_battery_correct"
                style="@style/style_text_28sp_white_inter_medium"
                android:layout_marginBottom="36dp"
                android:text="@string/please_put_battery_correct_position_and_again" />


            <LinearLayout
                android:id="@+id/layout_button"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:layout_marginBottom="56dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="44dp"
                android:paddingEnd="44dp"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_back"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:outlineAmbientShadowColor="@color/black"
                    android:outlineSpotShadowColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="32dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:gravity="center"
                        android:background="@drawable/bg_button_blue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="23dp"
                            android:src="@drawable/img_icon_home" />

                        <TextView
                            style="@style/style_text_30sp_white_inter_semi_bold"
                            android:text="@string/back" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_retry"
                    android:layout_weight="1"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:outlineAmbientShadowColor="@color/black"
                    android:outlineSpotShadowColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:background="@drawable/bg_button_blue"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="23dp"
                            android:src="@drawable/img_icon_retry" />

                        <TextView
                            style="@style/style_text_30sp_white_inter_semi_bold"
                            android:text="@string/retry" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/bottom_dialogFragment"
            android:name="com.selex.bssStation.core.utility.BottomDialogFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>